<resources>
    <string name="app_name">Travelog</string>

    <!-- Bottom Navigation Menu - menu_bottom_navigation.xml -->
    <string name="menu_guide">가이드</string>
    <string name="menu_menu">메뉴</string>
    <string name="menu_record">기록</string>
    <string name="menu_schedule">일정</string>
    <string name="tv_guide">가이드 화면</string>
    <string name="tv_record">기록 화면</string>
    <string name="tv_schedule">일정 화면</string>
    <string name="tv_menu">메뉴 화면</string>

    <!-- Schedule Fragment - fragment_schedule.xml-->
    <string name="tv_title_schedule">지도를 보면서\n나만의 여행 일정을 짜보세요!</string>
    <string name="tv_subtitle_schedule">내 여행 일정</string>
    <string name="btn_add_schedule">+ 새 일정 추가</string>
    <string name="tv_dest_desc_schedule">여행지</string>
    <string name="tv_schedule_desc">여행 일정</string>
    <string name="tv_recommend_place">추천 여행지역</string>
    <string name="tv_place_all">여행지역 전체 보기</string>
    <string name="tb_other_info">일정 짜기</string>
    <string name="tv_vacation_spot_more">더보기</string>
    <string name="tv_food_more">더보기</string>
    <string name="tv_festival_more">더보기</string>


    <!-- Schedule Select Fragment fragment_schedule_select.xml -->
    <string name="btn_search">다음</string>
    <string name="tv_search">여행정보 검색 화면</string>
    <string name="tv_guide_item">서울</string>
    <string name="tv_item_selected">강릉</string>

    <!-- Schedule Select Fragment fragment_schedule_select.xml -->
    <string name="tv_travel_name">여행 이름</string>
    <string name="tv_select_date">여행 기간</string>
    <string name="et_put_travel_name">여행 이름을 입력하세요</string>
    <string name="btn_next">다음</string>
    <string name="tv_no_schedule">아직 여행 일정이 없어요!\n새 일정을 추가해 보세요!</string>

    <!-- Schedule Detail Fragment fragment_schedule_detail.xml -->
    <string name="tv_schedule_setting">일정 설정</string>
    <string name="btn_done">완료</string>

    <string name="tv_noData">해당 데이터가 없습니다</string>
    <string name="tv_empty_result">여행지가 없습니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_place_search_item">스타벅스</string>
    <string name="btn_search_place">장소</string>
    <string name="tv_google_map_view">구글 맵</string>
    <string name="tv_place_detail_name">스타벅스</string>
    <string name="btn_place_add">추가</string>
    <string name="tv_place_detail_type">Restaurant</string>
    <string name="tv_place_detail_address">상세 주소</string>
    <string name="tv_place_detail_review">주요 리뷰</string>
    <string name="tv_place_detail_review_sample">3층의 뷰~. 해변을 보면서 맛과 향이 좋은 콜롬비아 드립커피를 마시면 잠시 여유로움 속으로 행복이 스며듭니다</string>
    <string name="tv_place_detail_phone_title">전화번호</string>
    <string name="tv_place_detail_phone_number">033-653-0931</string>
    <string name="tv_place_review">운영자</string>
    <string name="tv_place_review_rating">5점</string>
    <string name="tv_place_review_relative_time">4일 전</string>
    <string name="tv_item_place_review_time">2021년 11월 15일</string>
    <string name="tv_item_recycler_place_recommend">관광지</string>
    <string name="color_transparent">#00FFFFFF</string>
    <string name="tv_confirm_no_items">등록된 관광지가 없습니다.</string>

    <string name="tv_add_start_date">여행기간을 선택하세요</string>

    <!-- fragment_record.xml -->
    <string name="tv_no_record">기록이 없어요!\n일정을 먼저 추가해주세요!</string>

    <!-- activity_tutorial.xml -->
    <string name="btn_tutorial_skip">건너뛰기</string>

</resources>
