<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    tools:context=".ui.place.view.PlaceReviewLayout">

    <TextView
        android:id="@+id/tv_item_place_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:tag=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_place_review" />

    <TextView
        android:id="@+id/tv_item_place_review_relative_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_item_place_review"
        app:layout_constraintTop_toBottomOf="@id/tv_item_place_review"
        tools:text="@string/tv_place_review_relative_time" />

    <TextView
        android:id="@+id/tv_item_place_review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_place_review_relative_time"
        app:layout_constraintStart_toEndOf="@id/tv_item_place_review_relative_time"
        app:layout_constraintTop_toTopOf="@id/tv_item_place_review_relative_time"
        tools:text="⭐ 4" />

    <ImageView
        android:id="@+id/iv_item_place_review_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_place_review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_place_review_relative_time"
        tools:text="@string/tv_place_detail_review_sample" />

    <TextView
        android:id="@+id/tv_item_place_review_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_place_review_text"
        tools:text="@string/tv_item_place_review_time" />


</androidx.constraintlayout.widget.ConstraintLayout>
