<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thequietz.travelog.place.viewmodel.PlaceDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".place.view.PlaceDetailFragment">

        <LinearLayout
            android:id="@+id/ll_google_map_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_place_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_google_map_view"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_place_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_place_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_google_map_detail"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.detail.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/tv_place_detail_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_place_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_recycler_place_detail" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_place_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="10dp"
            android:background="@color/purple_500"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/btn_place_add"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_place_detail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>